--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -56,8 +56,8 @@
         </section>
         <div id="insta-section"class="row">
             <div class="col-lg p-5">
-                <p class="insta-info">These responses are not being used in any negative way
-                  , just to hear stories and see how cool people are all over! you do not
+                <p class="insta-info">These responses are not being used in any negative way,
+                 just to hear stories and see how cool people are all over! you do not
                   have to share your name or where you live, it just makes your
                   responses more identifiable if you see them on the instagram.
                   every two weeks or so there will be a new question put out via
