--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -78,7 +78,7 @@ body::-webkit-scrollbar {
   background-position: center;
   background-size: contain;
   background-attachment: fixed;
-  transform: scale(1.2); }
+  width: 100vw; }
 
 .info-col {
   background-color: #fff; }
@@ -99,7 +99,8 @@ body::-webkit-scrollbar {
       font-size: .75em; } }
 
 #insta-section {
-  border-bottom: 2px solid white; }
+  border-bottom: 2px solid white;
+  font-family: "Hanson-Bold", "Arial", sans-serif; }
   #insta-section div {
     background-color: #ffffff; }
 
